--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "roles/java"]
 	path = roles/java
 	url = https://github.com/William-Yeh/ansible-oracle-java
-[submodule "scala"]
+[submodule "roles/scala"]
 	path = roles/scala
 	url = https://github.com/AnsibleShipyard/ansible-scala.git
-[submodule "sbt"]
+[submodule "roles/sbt"]
 	path = roles/sbt
 	url = https://github.com/AnsibleShipyard/ansible-sbt.git
