oops, we need the spark role... adding back

--- a/vagrant.yml
+++ b/vagrant.yml
@@ -9,4 +9,5 @@
     - { role: java, sudo: yes }
     - { role: python, sudo: yes }
     - { role: scala, sudo: yes }
+    - { role: spark, sudo: yes }
     - { role: sbt, sudo: yes }
